数据测试分页有bug

--- a/loan/src/main/resources/templates/hel.html
+++ b/loan/src/main/resources/templates/hel.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8"/>
-<title>Insert title here</title>
+<title>数据页面</title>
+	<link rel="stylesheet" type="text/css" href="/static/css/base.css"/>
+	<link rel="stylesheet" type="text/css" href="/static/css/tables.css"/>
+	<link rel="stylesheet" type="text/css" href="/static/css/menus-core.css"/>
+	
 </head>
 <body>
-111111
+
+    <h1>div.pure-menu.pure-menu-horizontal.pure-menu-scrollable</h1>
+    <div class="pure-menu pure-menu-horizontal pure-menu-scrollable">
+        <a href="#" class="pure-menu-link pure-menu-heading">Title</a>
+        <ul class="pure-menu-list">
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Blog</a></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Yahoo</a></li>
+        </ul>
+    </div>
+
+<h2>贷款列表</h2>
+
+    <table class="pure-table pure-table-horizontal">
+        <thead>
+            <tr>
+                <th>序号</th>
+                <th>名字</th>
+                <th>地址</th>
+                <th>联系方式</th>
+                <th>联系方式</th>
+                <th>联系方式</th>
+                <th>联系方式</th>
+                <th>联系方式</th>
+                <th>联系方式</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>ssss</td>
+                <td>Accord</td>
+                <td>2009</td>
+                <td>2009</td>
+                <td>2009</td>
+                <td>2009</td>
+                <td>2009</td>
+                <td>2009</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Toyota</td>
+                <td>Camry</td>
+                <td>2012</td>
+                <td>2012</td>
+                <td>2012</td>
+                <td>2012</td>
+                <td>2012</td>
+                <td>2012</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
